--- a/pom.xml
+++ b/pom.xml
@@ -292,10 +292,10 @@
       <plugin>
         <groupId>io.openliberty.tools</groupId>
         <artifactId>liberty-maven-plugin</artifactId>
-        <version>3.8.2</version>
+        <version>3.11.2</version>
         <configuration>
           <runtimeArtifact>
-            <groupId>io.openliberty.beta</groupId>
+            <groupId>io.openliberty</groupId>
             <artifactId>openliberty-runtime</artifactId>
             <version>LATEST</version>
             <type>zip</type>
