--- a/Dockerfile.podman
+++ b/Dockerfile.podman
@@ -1,23 +1,23 @@
 # Stage and thin the application 
 # tag::OLimage1[]
-FROM icr.io/appcafe/open-liberty:beta as staging
+FROM icr.io/appcafe/open-liberty:25.0.0.1 as staging
 # end::OLimage1[]
 
 # tag::copyJar[]
-COPY --chown=1001:0 target/spring-petclinic-3.2.0-SNAPSHOT.jar \
-                    /staging/fat-spring-petclinic-3.2.0-SNAPSHOT.jar
+COPY --chown=1001:0 target/spring-petclinic-3.4.0-SNAPSHOT.jar \
+                    /staging/fat-spring-petclinic-3.4.0-SNAPSHOT.jar
 # end::copyJar[]
 
 # tag::springBootUtility[]
 RUN springBootUtility thin \
- --sourceAppPath=/staging/fat-spring-petclinic-3.2.0-SNAPSHOT.jar \
- --targetThinAppPath=/staging/thin-spring-petclinic-3.2.0-SNAPSHOT.jar \
+ --sourceAppPath=/staging/fat-spring-petclinic-3.4.0-SNAPSHOT.jar \
+ --targetThinAppPath=/staging/thin-spring-petclinic-3.4.0-SNAPSHOT.jar \
  --targetLibCachePath=/staging/lib.index.cache
 # end::springBootUtility[]
 
 # Build the image
 # tag::OLimage2[]
-FROM icr.io/appcafe/open-liberty:beta
+FROM icr.io/appcafe/open-liberty:25.0.0.1
 # end::OLimage2[]
 
 ARG VERSION=1.0
@@ -48,8 +48,8 @@ COPY src/main/liberty/config/crac.xml /config/configDropins/defaults
 COPY --chown=1001:0 --from=staging /staging/lib.index.cache /lib.index.cache
 # end::libcache[]
 # tag::thinjar[]
-COPY --chown=1001:0 --from=staging /staging/thin-spring-petclinic-3.2.0-SNAPSHOT.jar \
-                    /config/dropins/spring/thin-spring-petclinic-3.2.0-SNAPSHOT.jar
+COPY --chown=1001:0 --from=staging /staging/thin-spring-petclinic-3.4.0-SNAPSHOT.jar \
+                    /config/dropins/spring/thin-spring-petclinic-3.4.0-SNAPSHOT.jar
 # end::thinjar[]
 
 RUN configure.sh 
