--- a/Dockerfile.podman
+++ b/Dockerfile.podman
@@ -1,7 +1,7 @@
 # Stage and thin the application 
 # tag::OLimage1[]
-FROM icr.io/appcafe/open-liberty:25.0.0.1 as staging
 # end::OLimage1[]
+FROM icr.io/appcafe/open-liberty:full-java21-openj9-ubi-minimal-amd64 as staging
 
 # tag::copyJar[]
 COPY --chown=1001:0 target/spring-petclinic-3.4.0-SNAPSHOT.jar \
@@ -17,7 +17,7 @@ RUN springBootUtility thin \
 
 # Build the image
 # tag::OLimage2[]
-FROM icr.io/appcafe/open-liberty:25.0.0.1
+FROM icr.io/appcafe/open-liberty:full-java21-openj9-ubi-minimal-amd64
 # end::OLimage2[]
 
 ARG VERSION=1.0
@@ -42,7 +42,7 @@ RUN cp /opt/ol/wlp/templates/servers/springBoot3/server.xml /config/server.xml
 
 COPY src/main/liberty/config/crac.xml /config/configDropins/defaults
 
-#RUN features.sh
+# RUN features.sh
 
 # tag::libcache[]
 COPY --chown=1001:0 --from=staging /staging/lib.index.cache /lib.index.cache
